--- a/autosync.sh.example
+++ b/autosync.sh.example
@@ -11,13 +11,13 @@ NC='\033[0m'  # No Color
 
 # Initial sync
 echo "Performing initial sync..."
-rsync -avz --delete "$SRC_DIR" "$PI_USER@$PI_HOST:$DEST_DIR"
+rsync -avz --delete --exclude ".venv" "$SRC_DIR" "$PI_USER@$PI_HOST:$DEST_DIR"
 echo -e "${GREEN}Initial sync completed.${NC}"
 
 # Watch for changes
-inotifywait -mr -e close_write,delete,move --exclude '\.git' "$SRC_DIR" | while read EVENT
+inotifywait -mr -e close_write,delete,move --exclude '(\.git|\.venv)' "$SRC_DIR" | while read EVENT
 do
     echo "Change detected: $EVENT"
-    rsync -avz --delete "$SRC_DIR" "$PI_USER@$PI_HOST:$DEST_DIR"
+    rsync -avz --delete --exclude ".venv" --exclude ".git" "$SRC_DIR" "$PI_USER@$PI_HOST:$DEST_DIR"
     echo -e "${GREEN}Sync completed.${NC}"
 done
